[package]
name = "rust_itti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
packet = "0.1.4"
pcap-file = "2.0.0"
serde_json = "1.0"
gtp-rs = { version="0.1.0", git="https://github.com/ErvinsK/gtp-rs"}